--- a/style.css
+++ b/style.css
@@ -90,7 +90,7 @@ body {
   }
 
   .student-testimonial {
-    padding: 30px 70px 90px 70px;
+    padding: 30px 70px 10px 70px;
     width: 80%;
     margin: auto;
     /* background color: chocolate */
@@ -146,6 +146,7 @@ body {
     width: 80%;
     margin: auto;
     text-align: center;
+    margin-top: 0px;
   }
 
   .co {
